// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";

import "mesos/mesos.proto";

package mesos.resource_provider.registry;

option java_package = "org.apache.mesos.resource_provider.registry";
option java_outer_classname = "Protos";

// NOTE: This object defines wrappers around existing objects in case
// the Registry wishes to store more information about the wrapped objects
// in the future.

message ResourceProvider {
  required ResourceProviderID id = 1;
  optional string type = 2;
  optional string name = 3;
}


// A top level object that is managed by the Registrar and persisted.
message Registry {
  repeated ResourceProvider resource_providers = 1;
  repeated ResourceProvider removed_resource_providers = 2;
}
